--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,24 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </div>
+  <div class="tags">
+    <span>
+      {% unless page.tags.size == 0 %}
+        [{% for tag in page.tags %}
+          {% capture tag_name %}{{ tag }}{% endcapture %}
+          <code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;
+        {% endfor %}]
+      {% endunless %}
+    </span>
+  </div>
 
   <div class="entry">
     {{ content }}
   </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
 
   {% include disqus.html %}
 </article>
