--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,13 +21,19 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+
 }
 
 .container {
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 30px;
   width: 100%;
-  
+
+}
+
+#main.container {
+  min-height: 100vh;
+
 }
 
 h1, h2, h3, h4, h5, h6 {
