--- a/_layouts/submission.html
+++ b/_layouts/submission.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="bodyContainer">
 
 <div class="submission">
     <h1>{{ page.title }}</h1>
@@ -8,4 +9,5 @@ layout: default
         {{ content }}
     </div>
     <a href="{{ site.baseurl }}/submissions">← Back to Submissions</a>
+</div>
 </div>
