--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-
+<h1 class="header">{{ page.header }}</h1>
+<div class="bodyContainer">
 <article class="page">
+ 
 
   <h1>{{ page.title }}</h1>
 
@@ -10,3 +12,4 @@ layout: default
     {{ content }}
   </div>
 </article>
+</div>
