--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,12 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  padding-top: 73px;
 
+}
+
+body, html {
+  height: 100%;
 }
 
 .container {
@@ -51,14 +56,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 35px;
+  margin-top: 18px;
+  text-align: center;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 26px;
 }
 
 h3 {
@@ -81,6 +88,15 @@ a {
   &:hover, &:active {
     color: $blue;
   }
+}
+
+h1.header {
+  font-size: 50px;
+  font-weight: bold;
+  background: rgb(236, 236, 236);
+  margin-top: 0;
+  padding: 10px 25px;
+  text-align: left;
 }
 
 ul, ol {
@@ -156,9 +172,11 @@ img {
 // .masthead
 //
 
+/*
 .wrapper-masthead {
   margin-bottom: 50px;
 }
+*/
 
 .masthead {
   padding: 20px 0;
@@ -215,9 +233,9 @@ img {
     margin: 3px 0;
   }
 }
-
+/*
 nav {
-  float: right;
+  float: left;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
@@ -232,7 +250,7 @@ nav {
   a {
     margin-left: 20px;
     color: $darkGray;
-    text-align: right;
+    text-align: center;
     font-weight: 300;
     letter-spacing: 1px;
 
@@ -242,10 +260,217 @@ nav {
     }
   }
 }
+*/
+
+
+.navbar {
+//background-color: rgba(255, 255, 255, 0.85)!important;
+background-color: white!important;
+box-shadow: 1px 1px 1px rgb(194, 194, 194);
+}
+
+
+.navbar.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
+}
+
+
 
 //
 // .main
 //
+.hero {
+  /* Sizing */
+  width: 100vw;
+  height: 100vh;
+   /* Flexbox stuff */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   /* Text styles */
+   text-align: center;
+     /* Background styles */
+     background-image: url(../../images/didit_background.svg);
+     background-size: cover;
+     background-position: center center;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+}
+
+//Temporary fix for fixed header cutting off splash image
+.splash-screen {
+  position: relative;
+  height: 100%;
+  
+}
+
+
+.splash-screen i, .hero i {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 250%);
+  -ms-transform: translate(-50%, 250%);
+  color: white;
+  font-size: 100px;
+  border: none;
+  cursor: pointer;
+  
+  @include mobile {
+    font-size: 70px;
+    transform: translate(-50%, 400%);
+    -ms-transform: translate(-50%, 400%);
+  }
+}
+
+.bounce {
+	-moz-animation: bounce 3s infinite;
+	-webkit-animation: bounce 3s infinite;
+	animation: bounce 3s infinite;
+}
+@-moz-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+
+.splash-screen i:hover, .hero i:hover {
+  color: black;
+}
+
+
+a.maincontent-anchor {
+  display: block;
+    position: relative;
+    top: 10px;
+}
+
+.mainBodyContent:before {
+  content:"";
+  display:block;
+  height:113px; /* fixed header height*/
+  margin:-113px 0 0; /* negative fixed header height */
+  }
+
+img.splash {
+  width: 100%; 
+  //height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+
+.sideLinks {
+  background: rgb(236, 236, 236);
+  color: #000;
+  border: 1px solid rgb(212, 212, 212);
+  padding: 0 15px;
+  border-radius: 2px;
+
+    @include mobile {
+      margin: 15px 0;
+    }
+
+    a {
+      margin-bottom: 100px!important;
+    }
+
+    ul {
+      list-style-type: none;
+      padding-left: 5px;
+
+    }
+
+    li {
+      padding-bottom: 5px;
+      text-decoration: underline;
+    }
+}
+
+.bodyContainer {
+  width: 100%;
+  text-align: left;
+  padding: 0 30px;
+}
+
+.our-playbook {
+  width: 100%;
+  text-align: left;
+  padding: 0 30px;
+  border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+.our-product-managers {
+  width: 100%;
+  text-align: left;
+  padding: 0 30px;
+  border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+.our-designers {
+  width: 100%;
+  text-align: left;
+  padding: 0 30px;
+  border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+.our-engineers {
+  width: 100%;
+  text-align: center;
+  padding: 0 30px;
+  border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+.leadership {
+  width: 100%;
+  text-align: left;
+  padding: 0 30px;
+}
 
 .posts > .post {
   padding-bottom: 2em;
@@ -285,7 +510,7 @@ nav {
 }
 
 footer {
-  padding: 20px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
