--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 16px/1.4 $helvetica;
   color: $darkGray;
   padding-top: 73px;
 
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 35px;
   margin-top: 18px;
-  text-align: center;
+  text-align: left;
   a {
     color: inherit;
   }
@@ -396,6 +396,29 @@ a.maincontent-anchor {
   margin:-113px 0 0; /* negative fixed header height */
   }
 
+  // Prevents fixed header from covering content after clicking anchor point
+  .headings:before, .paragraph:before, .list:before, .columns:before, .linksandimages:before, .equalcolumns:before, .varyingcolumns:before {
+    content:"";
+    display:block;
+    height:113px; /* fixed header height*/
+    margin:-113px 0 0; /* negative fixed header height */
+    }
+
+    .roledescription:before, .practices:before, .how:before, .discovery:before, .problemstatement:before, .framing:before, .inception:before, .research:before, .buildmeasurelearn:before, .interviews:before, .userstory:before, .prototype:before, .usertesting:before {
+      content:"";
+      display:block;
+      height:113px; /* fixed header height*/
+      margin:-113px 0 0; /* negative fixed header height */
+      }
+      
+
+  .headerFix:before {
+      content:"";
+      display:block;
+      height:113px; /* fixed header height*/
+      margin:-113px 0 0; /* negative fixed header height */
+      }
+
 img.splash {
   width: 100%; 
   //height: 100%;
@@ -406,9 +429,7 @@ img.splash {
 }
 
 .sideLinks {
-  background: rgb(236, 236, 236);
   color: #000;
-  border: 1px solid rgb(212, 212, 212);
   padding: 0 15px;
   border-radius: 2px;
 
@@ -416,8 +437,18 @@ img.splash {
       margin: 15px 0;
     }
 
+    h2 {
+      margin: 0!important;
+    }
     a {
-      margin-bottom: 100px!important;
+      display: block;
+      padding: 10px;
+    }
+
+    a:hover {
+      background: #5a5a5a;
+      color: #fff;
+      text-decoration: none;
     }
 
     ul {
@@ -428,9 +459,47 @@ img.splash {
 
     li {
       padding-bottom: 5px;
-      text-decoration: underline;
+      font-size: 15px;
     }
 }
+
+.toc {
+  background: rgb(236, 236, 236);
+  color: #000;
+  border: 1px solid rgb(212, 212, 212);
+  padding: 0 15px;
+  border-radius: 2px;
+  width: 300px;
+  margin-bottom: 60px;
+
+    @include mobile {
+      margin: 15px 0;
+      width: 100%;
+    }
+
+    a {
+      margin-bottom: 100px!important;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    ul li{
+      list-style-type: circle;
+      padding-left: 5px;
+
+    }
+
+    li {
+      padding-bottom: 5px;
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+}
+
 
 .bodyContainer {
   width: 100%;
