--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,14 @@
   
 });
   </script>
+
+    <!-- back to top button https://github.com/vfeskov/vanilla-back-to-top -->
+    <script src="https://unpkg.com/vanilla-back-to-top@7.1.14/dist/vanilla-back-to-top.min.js"></script>
+    <script>addBackToTop({
+      diameter: 56,
+      backgroundColor: 'rgb(71, 76, 91)',
+      textColor: '#fff'
+    })</script>
+
   </body>
 </html>
