--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -273,6 +273,11 @@ nav {
 //background-color: rgba(255, 255, 255, 0.85)!important;
 background-color: white!important;
 box-shadow: 1px 1px 1px rgb(194, 194, 194);
+  
+  li {
+    height: 30px;
+  }
+
   a:hover {
     border-bottom: rgb(47, 116, 182) solid 3px!important ;
   }
@@ -541,7 +546,7 @@ img.splash {
     }
 
     li {
-      padding-bottom: 5px;
+      padding-bottom: 2px;
       font-size: 14px;
     }
 }
