Added three plays

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -4,6 +4,7 @@
                     <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
                     <li><a href="{{ site.baseurl }}/kickoff">Project Kickoff</a></li>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
+                    <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                     <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
                     <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigation</a></li>
                     <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
@@ -31,6 +32,8 @@
                     <li><a href="{{ site.baseurl }}/iteration-sizing">Iteration Planning-Sizing</a></li>
                     <li><a href="{{ site.baseurl }}/iteration-derisking">Iteration Planning-Derisking</a></li>
                     <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
-                    <li><a href="{{ site.baseurl }}/check-in">Clent Check In</a></li>
+                    <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
+                    <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
+
                 </ul>
     </div>
