Updated two plays

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -5,6 +5,7 @@
                     <li><a href="{{ site.baseurl }}/kickoff">Project Kickoff</a></li>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
+                    <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
                     <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
                     <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigation</a></li>
                     <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
