--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -1,40 +1,47 @@
 <div class="sideLinks">
             <h2>Product Management Plays</h2>
                 <ul>
-                    <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
+                    <li><a href="#">Overview</a></li>
+                    <li><a href="#">Glossary</a></li>
+                    <li><a href="#">Role of the Product Manager and Product Onwer</a></li>
                     <li><a href="{{ site.baseurl }}/kickoff">Project Kickoff</a></li>
-                    <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
-                    <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
-                    <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
+                    <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
                     <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
                     <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigation</a></li>
+                    <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                     <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
                     <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
                     <li><a href="{{ site.baseurl }}/interview-synthesis">User Interview Synthesis</a></li>
+                    <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                     <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
                     <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
                     <li><a href="#">Technical Discovery &amp; Analysis</a></li>
+                    <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                     <li><a href="#">Solutioning - Defining the Problem</a></li>
                     <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
                     <li><a href="#">Prototype Interviews</a></li>
                     <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
+                    <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
                     <li><a href="#">Art Gallery</a></li>
                     <li><a href="{{ site.baseurl }}/prioritization">Prioritization</a></li>
                     <li><a href="#">Feature Sizing</a></li>
+                    <li><a href="#">Generating a Backlog</a></li>
                     <li><a href="#">Writing User Stories</a></li>
                     <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
-                    <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
+                    <li><a href="#">Defining Definition of Done</a></li>
+                    <li><a href="#">Delivering Product</a></li>
                     <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
+                    <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                     <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
                     <li><a href="{{ site.baseurl }}/system-services">Integrating with Systems &amp; Services</a></li>
                     <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
+                    <li><a href="#">Setting Up a Product Board</a></li>
+                    <li><a href="#">All the Meetings You Need</a></li>
                     <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
                     <li><a href="{{ site.baseurl }}/iteration-sizing">Iteration Planning-Sizing</a></li>
                     <li><a href="{{ site.baseurl }}/iteration-derisking">Iteration Planning-Derisking</a></li>
                     <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
                     <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
-                    <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
-
                 </ul>
     </div>
