Added the definitions url

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -2,7 +2,7 @@
             <h2>Product Management Plays</h2>
                 <ul>
                     <li><a href="#">Overview</a></li>
-                    <li><a href="#">Glossary</a></li>
+                    <li><a href="{{ site.baseurl }}/definitions">Definitions</a></li>
                     <li><a href="#">Role of the Product Manager and Product Onwer</a></li>
                     <li><a href="{{ site.baseurl }}/kickoff">Project Kickoff</a></li>
                     <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
