added defining the problem under Framing

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -17,7 +17,7 @@
                     <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
                     <li><a href="#">Technical Discovery &amp; Analysis</a></li>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
-                    <li><a href="#">Solutioning - Defining the Problem</a></li>
+                    <li><a href="defining-the-problem">Solutioning - Defining the Problem</a></li>
                     <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
                     <li><a href="#">Prototype Interviews</a></li>
                     <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
