Added Defining Backlog Play Link

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Art Gallery</a></li>
                     <li><a href="{{ site.baseurl }}/prioritization">Prioritization</a></li>
                     <li><a href="#">Feature Sizing</a></li>
-                    <li><a href="#">Generating a Backlog</a></li>
+                    <li><a href="{{ site.baseurl }}/generating-backlog">Generating a Backlog</a></li>
                     <li><a href="#">Writing User Stories</a></li>
                     <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
