Added Delivering Product

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -30,7 +30,7 @@
                     <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                     <li><a href="#">Defining Definition of Done</a></li>
-                    <li><a href="#">Delivering Product</a></li>
+                    <li><a href="delivering-product">Delivering Product</a></li>
                     <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                     <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
