sizing and deriskig link changes
Changed links and titles for Iteration Sizing and Derisking.

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -39,8 +39,8 @@
                     <li><a href="#">Setting Up a Product Board</a></li>
                     <li><a href="#">All the Meetings You Need</a></li>
                     <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
-                    <li><a href="{{ site.baseurl }}/iteration-sizing">Iteration Planning-Sizing</a></li>
-                    <li><a href="{{ site.baseurl }}/iteration-derisking">Iteration Planning-Derisking</a></li>
+                    <li><a href="{{ site.baseurl }}/story-sizing">Story Sizing</a></li>
+                    <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
                     <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
                     <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
                 </ul>
