Updated links in product plays

--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -17,7 +17,7 @@
                     <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
                     <li><a href="#">Technical Discovery &amp; Analysis</a></li>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
-                    <li><a href="defining-the-problem">Solutioning - Defining the Problem</a></li>
+                    <li><a href="{{ site.baseurl }}/defining-the-problem">Solutioning - Defining the Problem</a></li>
                     <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
                     <li><a href="#">Prototype Interviews</a></li>
                     <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
@@ -30,7 +30,7 @@
                     <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                     <li><a href="{{ site.baseurl }}/definition-of-done">Defining Definition of Done</a></li>
-                    <li><a href="delivering-product">Delivering Product</a></li>
+                    <li><a href="{{ site.baseurl }}/delivering-product">Delivering Product</a></li>
                     <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                     <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                     <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
