--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -3,7 +3,8 @@
                 <ul>
                     <li><a href="#">Overview</a></li>
                     <li><a href="{{ site.baseurl }}/definitions">Definitions</a></li>
-                    <li><a href="#">Role of the Product Manager and Product Onwer</a></li>
+                    <li><a href="{{ site.baseurl }}/product-manager-role">Role of the Product Manager</a></li>
+                    <li><a href="{{ site.baseurl }}/product-owner-role">Role of the Product Owner</a></li>
                     <li><a href="{{ site.baseurl }}/kickoff">Project Kickoff</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
