--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -38,7 +38,7 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/generating-backlog">Generating a Backlog</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Writing User Stories</a></li>
+                            <li><a href="{{ site.baseurl }}/writing-user-stories">Writing User Stories</a></li>
                             <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                             <li><a href="{{ site.baseurl }}/definition-of-done">Defining Definition of Done</a></li>
