--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -1,5 +1,5 @@
 <div class="sideLinks">
-            <h2>Product Management Plays</h2>
+            <h2>Plays</h2>
                 <ul>
                     <li><a href="#">Overview</a></li>
                     <li><a href="{{ site.baseurl }}/definitions">Definitions</a></li>
