--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -1,5 +1,5 @@
 <div class="sideLinks">
-    <h2>Activities</h2>
+    <h2>Practices</h2>
     <ul>
      <li><a href="{{ site.baseurl }}/interview-script-generation">Interview Script Generation</a></li>
      <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry Interviewing</a></li>
