--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <!-- <nav>
             <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/playbook">Our Playbook</a>
+            <a href="{{ site.baseurl }}/playbook">Our Playlist</a>
             <a href="{{ site.baseurl }}/product-management">Product Management</a>
-            <a href="{{ site.baseurl }}/design">Design</a>
-            <a href="{{ site.baseurl }}/engineering">Engineering</a>
+            <a href="{{ site.baseurl }}/design">Product Design</a>
+            <a href="{{ site.baseurl }}/engineering">Product Engineering</a>
           </nav>
         -->
           
@@ -17,11 +17,10 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Our Playbook
+                      Our Playlist
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="{{ site.baseurl }}/playbook">Build | Measure | Learn</a>
-                      <a class="dropdown-item" href="{{ site.baseurl }}/leadership">Leadership</a>
+                      <a class="dropdown-item" href="{{ site.baseurl }}/playbook">Our Playlist</a>
                     </div>
                   </li>
               <li class="nav-item dropdown">
@@ -29,9 +28,10 @@
                   Our Team
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{{ site.baseurl }}/leadership">Leadership</a>
                   <a class="dropdown-item" href="{{ site.baseurl }}/product-management">Product Management</a>
-                  <a class="dropdown-item" href="{{ site.baseurl }}/design">Design</a>
-                  <a class="dropdown-item" href="{{ site.baseurl }}/engineering">Engineering</a>
+                  <a class="dropdown-item" href="{{ site.baseurl }}/design">Product Design</a>
+                  <a class="dropdown-item" href="{{ site.baseurl }}/engineering">Product Engineering</a>
                 </div>
               </li>
               
