--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -9,30 +9,29 @@
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
                             <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
-                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigation</a></li>
+                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigations</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                         <ul><ul><ul>
+                            <li><a href="#">Interview Script Generation</a></li>
                             <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
-                            <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
                             <li><a href="{{ site.baseurl }}/interview-synthesis">User Interview Synthesis</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
-                            <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
-                            <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
                             <li><a href="#">Technical Discovery &amp; Analysis</a></li>
+                            <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/defining-the-problem">Solutioning - Defining the Problem</a></li>
                             <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
                             <li><a href="#">Prototype Interviews</a></li>
+                            <li><a href="#">UI Design Development</a></li>
                             <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Art Gallery</a></li>
                             <li><a href="{{ site.baseurl }}/prioritization">Prioritization</a></li>
                             <li><a href="#">Feature Sizing</a></li>
                         </ul></ul></ul>
@@ -51,12 +50,13 @@
                             <li><a href="{{ site.baseurl }}/system-services">Integrating with Systems &amp; Services</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
                             <li><a href="#">Setting Up a Product Board</a></li>
+                            <li><a href="#">UI Component Library Development</a></li>
+                            <li><a href="#">508 Accessibility Considerations</a></li>
                     </ul></ul></ul>
                     <li><a href="#">All the Meetings You Need</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
-                            <li><a href="{{ site.baseurl }}/story-sizing">Story Sizing</a></li>
-                            <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
+                            <li><a href=#>Iteration Planning</a></li>
                             <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
                             <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
                         </ul></ul></ul>
