--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -1,23 +1,30 @@
 <div class="sideLinks">
     <h2>Practices</h2>
     <ul>
-     <li><a href="{{ site.baseurl }}/interview-script-generation">Interview Script Generation</a></li>
-     <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry Interviewing</a></li>
+     <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
+     <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry</a></li>
+     <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
+     <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
-     <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis of User Testing/Interviews</a></li>
+     <li><a href="#">5 Whys</a></li>
+     <li><a href="#">Service Blueprints</a></li>     
      <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
-     <li><a href="#">Service Blueprints</a></li>
+     <li><a href="#">Dump and Sort</a></li> 
+     <li><a href="#">Group Sketching</a></li>
      <li><a href="{{ site.baseurl }}/storyboard">Storyboard</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
-     <li><a href="{{ site.baseurl }}/2x2sorting">2x2 Sorting Business Goals vs Risk</a></li>
+     <li><a href="#">Dot Voting</a></li>
      <li><a href="#">Wireframe Development</a></li>
-     <li><a href="#">Group Sketching / Dot Voting</a></li>
-     <li><a href="#">5 Whys</a></li>
-     <li><a href="#">Brainstorming Sessions</a></li>
-     <li><a href="#">Prototype Development for User Testing</a></li>
-     <li><a href="#">508 Accessibility Considerations</a></li>
+     <li><a href="#">Prototype Development</a></li>     
+     <li><a href="{{ site.baseurl }}/2x2sorting">2x2 Sorting</a></li>
+     <li><a href="#">Stack Ranking</a></li>
      <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
-     <li><a href="#">UI Design Development</a></li>
-     <li><a href="#">UI Component Library Development</a></li>
+     <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
+     <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
+     
+<!-- Old ones ... verify if needed
+     <li><a href="#">Art Gallery</a></li>
+     <li><a href="{{ site.baseurl }}/interview-script-generation">Interview Script Generation</a></li>
+ -->
     </ul>
     </div>
