--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -56,7 +56,7 @@
                     <li><a href="#">All the Meetings You Need</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
-                            <li><a href=#>Iteration Planning</a></li>
+                            <li><a href="#">Iteration Planning</a></li>
                             <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
                             <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
                         </ul></ul></ul>
