--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -20,7 +20,7 @@
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
                             <li><a href="#">Technical Discovery &amp; Analysis</a></li>
-                            <li><a href="{{ site.baseurl }}/defining-problems">Defining &amp; Prioritizing Problems</a></li>
+                            <li><a href="#">Defining &amp; Prioritizing Problems</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                         <ul><ul><ul>
@@ -38,7 +38,7 @@
                     <li><a href="{{ site.baseurl }}/generating-backlog">Generating a Backlog</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/writing-user-stories">Writing User Stories</a></li>
-                            <li><a href="{{ site.baseurl }}/acceptance-criteria">Writing Acceptance Criteria</a></li>
+                            <li><a href="#">Writing Acceptance Criteria</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                             <li><a href="{{ site.baseurl }}/definition-of-done">Defining Definition of Done</a></li>
                         </ul></ul></ul>
@@ -47,7 +47,7 @@
                             <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                             <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
-                            <li><a href="{{ site.baseurl }}/system-services">Integrating with Systems &amp; Services</a></li>
+                            <li><a href="#">Integrating with Systems &amp; Services</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
                             <li><a href="#">Setting Up a Product Board</a></li>
                             <li><a href="#">UI Component Library Development</a></li>
