--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -3,24 +3,24 @@
     <ul>
      <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
      <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry</a></li>
-     <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
+     <li><a href="#">Team Synthesis</a></li>
      <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
      <li><a href="#">5 Whys</a></li>
      <li><a href="#">Service Blueprints</a></li>     
-     <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
+     <li><a href="#">Journey Map</a></li>
      <li><a href="#">Dump and Sort</a></li> 
      <li><a href="#">Group Sketching</a></li>
-     <li><a href="{{ site.baseurl }}/storyboard">Storyboard</a></li>
-     <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
+     <li><a href="#">Storyboard</a></li>
+     <li><a href="#">Persona Development</a></li>
      <li><a href="#">Dot Voting</a></li>
      <li><a href="#">Wireframe Development</a></li>
      <li><a href="#">Prototype Development</a></li>     
-     <li><a href="{{ site.baseurl }}/2x2sorting">2x2 Sorting</a></li>
+     <li><a href="#">2x2 Sorting</a></li>
      <li><a href="#">Stack Ranking</a></li>
-     <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
+     <li><a href="#">Atomic Design</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
-     <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
+     <li><a href="#">Derisking</a></li>
      
 <!-- Old ones ... verify if needed
      <li><a href="#">Art Gallery</a></li>
